# swagger.json
@@ -37,21 +37,21 @@
         "description": "",
         "parameters": [
           {
-            "name": "body",
+            "firstName": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
+                "lastName": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 },
-                "username": {
+                "favoriteColor": {
                   "example": "any"
                 },
-                "name": {
-                  "example": "any"
-                },
-                "ipaddress": {
+                "birthday": {
                   "example": "any"
                 }
               }
@@ -103,16 +103,20 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "firstName": {
+                  "example": "any"
+                },
+                "lastName": {
                   "example": "any"
                 },
                 "email": {
                   "example": "any"
                 },
-                "name": {
+                "favoriteColor": {
                   "example": "any"
-                },
-                "ipaddress": {
+                }
+                ,
+                "birthday": {
                   "example": "any"
                 }
               }
